@@ -5,3 +5,21 @@ The background color can be changed by selecting a color from a dropdown menu. T
 
 # Installation:
 ### Prerequisites
+* Java SE Development Kit 11 or later
+* JavaFX SDK 11 or later
+
+### Clone
+git clone https://github.com/exampleuser/RotatingLine.git
+
+### Usage
+* Navigate to the project directory in a terminal.
+* Compile the code with the command:
+ javac --module-path /path/to/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml RotatingLine.java
+ Replace `/path/to/javafx-sdk-11.0.2` with the actual path to the JavaFX SDK directory on your system.
+* Run the code with the command:
+java --module-path /path/to/javafx-sdk-11.0.2/lib --add-modules javafx.controls,javafx.fxml RotatingLine
+Replace `/path/to/javafx-sdk-11.0.2` with the actual path to the JavaFX SDK directory on your system.
+
+### Licence
+This project is licensed under the MIT License - see the LICENSE file for details.
+
